# md2gemini

./: .gitignore  pyproject.toml  shell.nix
