[tool.poetry]
name = "md2gemini"
version = "0.1.0"
description = ""
authors = ["makeworld <colecmac@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cjkwrap = "^2.2"
wcwidth = "^0.2.5"
pytest = "^6.0.1"
mistune = ">=2.0.0a4,<3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
md2gemini = "md2gemini:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

